<resources>
    <string name="app_name">GitFit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="shared_pref">com2027.killaz.kalorie.gitfit</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="challenge_init">CHALLENGE:</string>
    <string name="challenge_desc">CHALLENGE: Take %1$d steps!</string>
    <string name="circle_content_desc">A circle</string>
    <string name="steps_loading">Loading&#8230;</string>
    <string name="button_1">Today</string>
    <string name="button_2">This Week</string>
    <string name="button_3">This Month</string>
    <string name="fetching_challenge_progress">Fetching challenge progress...</string>
    <string name="on_board_activity_next_btn">Next</string>
    <string name="on_board_activity_back_btn">Back</string>
    <string name="on_board_activity_finish_btn">Finish</string>
    <string name="content_descr_onboardscrn">Fancy background for on board activity</string>
    <string name="profile_profiletext">User Info and Settings</string>
    <string name="profile_change_password">Change Password</string>
    <string name="profile_delete_account">Delete Account</string>
    <string name="profile_points">Points</string>
    <string name="profile_nickname">Nickname</string>
    <string name="profile_email">Email</string>
    <string name="profile_wins">Challenges Completed</string>
    <string name="content_descr_aperson">aPerson</string>
    <string name="content_descr">anImg</string>
    <string name="friends_swipe_instruction_req"><![CDATA[Swipe <- left to delete | Swipe right -> to accept]]></string>
    <string name="friends_swipe_instruction_list"><![CDATA[Swipe <- left to delete | Swipe right -> for information]]></string>
    <string name="enter_steps">Enter Steps</string>
    <string name="your_progress">Your progress: %1$d / %2$d</string>
    <string name="channel_name">NOTIFICATION_CHANNEL</string>
    <string name="channel_description">A notification channel</string>
    <string name="challenges_friend_underline"><u>Your Current Friend Challenge Is</u></string>
    <string name="challenges_personal_underline"><u>Your Current Personal Challenge Is</u></string>
    <string name="challenges_reqs_from_friends"><u>Challenge Requests From Friends</u></string>
    <string name="action_share">SHARE</string>
    <string name="settings_reset_intros">Reset Intros</string>
    <string name="sign_up_txt">Don\'t have an account? Sign up</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="very_underweight">You are alarmingly underweight.</string>
    <string name="underweight">You are underweight.</string>
    <string name="healthy">You are healthy. Keep it up!</string>
    <string name="overweight">You are overweight.</string>
    <string name="obese">You are obese.</string>
    <string name="challenges_progress">Challenges Progress</string>
    <string name="challenge_ohno">Oh no! You don\'t have any challenge requests from friends :( If you do get some, they will be displayed here</string>
    <string name="challenge_a_friend">Challenge A Friend</string>
    <string name="register_create_account">Create Account</string>
    <string name="bmi_height">height</string>
    <string name="bmi_weight">weight</string>
    <string name="bmi_insert_age">insert age</string>
    <string name="bmi_your_bmi_is">Your BMI is:</string>
    <string name="bmi_submit">Submit</string>
    <string name="friend_popup_challenges_completed">Challenges Completed</string>
    <string name="friend_popup_points">Points</string>
    <string name="friend_popup_steps_taken">Steps Taken</string>
    <string name="friend_req_item_name">Name</string>
    <string name="friends_fragment_friends">Friends</string>
    <string name="friends_fragment_friend_requests">Friend Requests</string>
    <string name="friends_fragment_add_friend">Add Friend</string>
    <string name="leaderboards_your_rank_text">You rank at 47 for calories burned</string>
    <string name="leaderboards_name">Name</string>
    <string name="leaderboards_steps">Steps</string>
    <string name="leaderboards_calories">Calories</string>
    <string name="leaderboards_position">#</string>
    <string name="leaderboards_points">Points</string>
    <string name="leaderboards_challenges">Challenges</string>
    <string name="leaderboards_choose_sorting_btn">Choose Sorting</string>
    <string name="leaderboards_scroll_to_rank_btn">Scroll to My Rank</string>
    <string name="tracker_distance_traveled">Distance Traveled:</string>
    <string name="tracker_dist_travleled_default">0 km</string>
    <string name="tracker_current_pace">Current Pace:</string>
    <string name="tracker_pace_default">0 km/h</string>
    <string name="tracker_calories_burned">Calories Burned:</string>
    <string name="tracker_calories_default">0</string>
    <string name="tracker_points_collected">Points Collected:</string>
    <string name="tracker_points_default">0</string>
    <string name="tracker_steps_taken">Steps Taken:</string>
    <string name="tracker_steps_counter_default">0</string>
    <string name="tracker_start_stop_time">Start/Stop Time</string>
    <string name="tracker_reset_all">Reset all</string>
    <string name="fragment_menu_home">Home</string>
    <string name="fragment_menu_location_tracker">Location Tracker</string>
    <string name="fragment_menu_friends">Friends</string>
    <string name="fragment_menu_challenges">Challenges</string>
    <string name="fragment_menu_bmi_calculator">BMI Calculator</string>
    <string name="fragment_menu_leaderboards">Leaderboards</string>
    <string name="fragment_menu_user_settings">User Settings</string>
    <string name="fragment_menu_log_out">Log Out</string>
    <string name="fragment_menu_log_out_and_exit">Log Out and Exit</string>
    <string name="terms_and_conditions_text">Last updated: 10.05.2019\n\nPlease read these Terms and Conditions (Terms, Terms and Conditions) carefully before using the GitFit Mobile Application, operated by Team Kalorie KillaZ (us, we, or our). \n\nYour access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service. \n\nBy accessing or using the Mobile Application you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Mobile Application. \n\nTerms \n1.You are not to make usernames that could be deemed threatening, hateful or offensive.\n2. Team Kalorie KillaZ reserves a right to delete offending users’ account.\n3. You agree to receive notification alerts (reminders) after periods of inactivity.\n4. You are able to delete your account permanently at any time.\n\nGitFit Privacy Policy\n1. Access to the Mobile Application and use of the Mobile Application offered on the Mobile Application by Team Kalorie KillaZ is subject to this Privacy Policy.\n2. By accessing the Mobile Application and registering in it for further use, you are deemed to have accepted this Privacy Policy, and in particular, you are deemed to have consented to our use and disclosure of your personal information such as: your email and GPS data.\n3. At no point, does the GitFit Mobile Application nor Team Kalorie KillaZ sell or otherwise give out the collected information to third parties.\n4. Team Kalorie KillaZ pledged to protect personal information by reasonable security measures, particularly with the storage of personal data.\n5. Team Kalorie KillaZ is not to be held responsible in case of any data loss.\n6. Team Kalorie KillaZ deletes all the data associated with the user that has chosen to terminate their account.\n\nChanges\nWe reserve the right, at our sole discretion, to modify or replace these Terms at any time.\n\nContact Us\n\nIf you have any questions about these Terms, please contact us at surreykaloriekillaz@gmail.com</string>
    <string name="terms_and_conditions_accept">OK</string>
    <string name="no_friend_challenge">You don\'t have a challenge from a friend currently active :(</string>

</resources>
