<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

<group android:checkableBehavior="single">
    <item android:id="@+id/menu_home" android:title="@string/fragment_menu_home" />
    <item android:id="@+id/menu_tracker" android:title="@string/fragment_menu_location_tracker" />
    <item android:id="@+id/menu_friends" android:title="@string/fragment_menu_friends" />
    <item android:id="@+id/menu_challenges" android:title="@string/fragment_menu_challenges" />
    <item android:id="@+id/menu_bmicalc" android:title="@string/fragment_menu_bmi_calculator" />
    <item android:id="@+id/menu_leaderboards" android:title="@string/fragment_menu_leaderboards" />
    <item android:id="@+id/menu_settings" android:title="@string/fragment_menu_user_settings" />
    <item android:id="@+id/menu_logout" android:title="@string/fragment_menu_log_out" />
    <item android:id="@+id/menu_logout_exit" android:title="@string/fragment_menu_log_out_and_exit" />

</group>


</menu>