<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4286f4">

    <ImageView
        android:id="@+id/circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle">
    </ImageView>

    <TextView
        android:id="@+id/stepTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="center"
        android:contentDescription="@string/circle_content_desc"
        android:layout_alignLeft="@+id/circle"
        android:layout_alignTop="@+id/circle"
        android:layout_alignRight="@+id/circle"
        android:layout_alignBottom="@+id/circle"
        android:text="@string/steps_loading"
        android:textSize="35sp"
        android:textColor="#000000" />

    <LinearLayout
        android:id="@+id/homeLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/stepTextView">

        <Button
            android:id="@+id/homeBtn1"
            android:text="@string/button_1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/homeBtn2"
            android:text="@string/button_2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/homeBtn3"
            android:text="@string/button_3"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:layout_centerHorizontal="true"
        android:text="@string/test2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeLinLayout"/>



</RelativeLayout>