<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:context="com2027.killaz.kalorie.gitfit.OnBoardingActivity">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/content_descr_aperson"
                android:src="@drawable/ic_person_black_24dp" />

            <TextView
                android:id="@+id/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="1dp"
                android:gravity="top"
                android:text="@string/profile_profiletext"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_descr"
                android:src="@drawable/baseline_email_black_24dp" />

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:text="@string/profile_email"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/email_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_descr"
                android:src="@drawable/baseline_face_black_24dp" />

            <TextView
                android:id="@+id/nickname_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/profile_nickname"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/nickname_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_descr"
                android:src="@drawable/baseline_poll_black_24dp" />

            <TextView
                android:id="@+id/points_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/profile_points"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/points_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_descr"
                android:src="@drawable/star_profile" />

            <TextView
                android:id="@+id/challenges_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_wins"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/challenges_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/change_password_btn"
                android:layout_width="208dp"
                android:background="@drawable/leaderboards_btn_shape"
                android:layout_height="40dp"
                android:layout_marginBottom="7dp"
                android:text="@string/profile_change_password" />

            <Button
                android:id="@+id/delete_acc_btn"
                android:layout_width="208dp"
                android:layout_height="40dp"
                android:background="@drawable/leaderboards_btn_shape"
                android:layout_marginBottom="5dp"
                android:text="@string/profile_delete_account" />

            <Button
                android:id="@+id/reset_shared_prefs_btn"
                android:layout_width="208dp"
                android:background="@drawable/leaderboards_btn_shape"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:text="@string/settings_reset_intros" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>