<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bluewall"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/challenges_personal_progress_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/challenges_progress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/challenges_personal_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/challenges_personal_underline"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <RelativeLayout
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/challenges_personal_progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_height="27dp"
            android:layout_gravity="center_horizontal"
            android:progressDrawable="@drawable/progress_bar_gradient" />

        <TextView
            android:id="@+id/challenges_personal_fetching_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fetching_challenge_progress"
            android:textAlignment="center"
            android:layout_alignTop="@+id/challenges_personal_progress_bar"
            android:layout_alignBottom="@+id/challenges_personal_progress_bar"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/challenges_personal_challenge_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/challenges_friends_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/challenges_friend_underline"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/challenges_friend_progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_height="27dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:progressDrawable="@drawable/progress_bar_gradient" />

        <TextView
            android:id="@+id/challenges_friend_fetching_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fetching_challenge_progress"
            android:layout_alignTop="@+id/challenges_friend_progress_bar"
            android:layout_alignBottom="@+id/challenges_friend_progress_bar"
            android:textAlignment="center" />

    </RelativeLayout>

    <TextView
        android:id="@+id/challenges_friend_challenge_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/challenges_challenge_btn"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/leaderboards_btn_shape"
        android:text="@string/challenge_a_friend" />

    <TextView
        android:id="@+id/ignore_challenges_list_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/challenges_reqs_from_friends"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/challenge_reqs_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="-5dp" />

    <TextView
        android:id="@+id/challenges_ohnoes"
        android:layout_width="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/challenge_ohno"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="visible" />

</LinearLayout>