<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_gradients"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/login_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="0dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@drawable/ic_splash" />

            <ProgressBar
                android:id="@+id/loginProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:visibility="gone" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_person_white_24dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/nicknameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_face_white"
                android:ems="10"
                android:hint="@string/nickname"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/createAccBtn"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_signup"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                android:text="Create Account"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>